Fixed output path build error

--- a/ios/SwiftUI/.gitignore
+++ b/ios/SwiftUI/.gitignore
@@ -1,4 +1,4 @@
-IntegrationDemo_SwiftUI/Preview\ Content
+IntegrationDemo_SwiftUI/Preview\ Content/*
 Frameworks
 IntegrationDemo_SwiftUI.xcworkspace
 Pods/
