--- a/android/kotlin/TapResearchKotlinDemo/app/src/main/assets/env.example
+++ b/android/kotlin/TapResearchKotlinDemo/app/src/main/assets/env.example
@@ -1,2 +1,2 @@
-USER_IDENTIFIER="my-test-user"
-API_TOKEN="my-api-token"
+USER_IDENTIFIER="public-demo-test-user"
+API_TOKEN="856f987d813389d1243bea2e4731a0fb"
