Updates / adds mvn source for tap

--- a/android/java/TapResearchJavaDemo/settings.gradle
+++ b/android/java/TapResearchJavaDemo/settings.gradle
@@ -11,6 +11,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url "https://artifactory.tools.tapresearch.io/artifactory/tapresearch-android-sdk/" }
+        flatDir {
+            dirs("libs")
+        }
     }
 }
 rootProject.name = "TapResearchJavaDemo"
