--- a/android/java/TapResearchJavaDemo/app/build.gradle
+++ b/android/java/TapResearchJavaDemo/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 
-    implementation(files("libs/tapsdk-release.aar"))
+    implementation 'com.tapresearch:tapsdk:3.0.0-beta+'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
