--- a/unity/UnityDemoMenu/Assets/Plugins/Android/launcherTemplate.gradle
+++ b/unity/UnityDemoMenu/Assets/Plugins/Android/launcherTemplate.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 dependencies {
     implementation project(':unityLibrary')
-        implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-
-    }
+    implementation 'com.google.code.gson:gson:2.8.0'
+}
 
 android {
     compileSdkVersion **APIVERSION**
