--- a/unity/UnityDemoMenu/Assets/Plugins/Android/launcherTemplate.gradle
+++ b/unity/UnityDemoMenu/Assets/Plugins/Android/launcherTemplate.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'com.google.code.gson:gson:2.8.0'
 }
 
