--- a/ios/ObjC+UIKit/Podfile
+++ b/ios/ObjC+UIKit/Podfile
@@ -6,6 +6,6 @@ target 'IntegrationDemo_ObjC_UIKit' do
   use_frameworks!
 
   # Pods for TapResearch
-  pod 'TapResearch', '3.2.0-beta1-15'
+  pod 'TapResearch', '3.2.0-beta2'
 
 end
