--- a/ios/Swift+UIKit/Podfile
+++ b/ios/Swift+UIKit/Podfile
@@ -6,6 +6,6 @@ target 'IntegrationDemo_Swift_UIKit' do
   use_frameworks!
 
   # Pods for swiftui-example-tapresearch
-  pod 'TapResearch', '3.2.0-beta2'
+  pod 'TapResearch', '3.2.3'
 
 end
