--- a/android/java/TapResearchJavaDemo/app/build.gradle
+++ b/android/java/TapResearchJavaDemo/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.tapresearch.tapresearchjavademo'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.tapresearch.tapresearchjavademo"
@@ -29,18 +29,24 @@ android {
 }
 
 dependencies {
-    implementation 'com.tapresearch:tapsdk:3.2.7'
+
+    // required by tap research sdk
+    implementation 'com.tapresearch:tapsdk:3.2.8'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+
+    // required by sample app
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    // test dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 }
