--- a/unity/SimpleUnityExample/.vscode/settings.json
+++ b/unity/SimpleUnityExample/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "BasicTest 2.sln"
+    "dotnet.defaultSolution": "SimpleUnityExample.sln"
 }
