--- a/android/java/TapResearchJavaDemo/app/build.gradle
+++ b/android/java/TapResearchJavaDemo/app/build.gradle
@@ -31,11 +31,12 @@ android {
 dependencies {
 
     // required by tap research sdk
-    implementation 'com.tapresearch:tapsdk:3.3.4'
+    implementation 'com.tapresearch:tapsdk:3.5.1'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+    implementation 'com.google.android.gms:play-services-appset:16.1.0'
 
     // required by sample app
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
