--- a/ios/ObjC+UIKit/Podfile
+++ b/ios/ObjC+UIKit/Podfile
@@ -6,6 +6,6 @@ target 'IntegrationDemo_ObjC_UIKit' do
   use_frameworks!
 
   # Pods for TapResearch
-  pod 'TapResearch', '3.4.1'
+  pod 'TapResearch', '3.6.0--rc1'
 
 end
