--- a/android/kotlin/TapResearchKotlinDemo/app/src/main/AndroidManifest.xml
+++ b/android/kotlin/TapResearchKotlinDemo/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".MainApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TapResearchKotlinDemo"
-        tools:targetApi="31">
+        tools:targetApi="35">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,6 +24,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".preview.WallPreviewActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.TapResearchKotlinDemo">
         </activity>
     </application>
 
