--- a/android/java/TapResearchJavaDemo/app/build.gradle
+++ b/android/java/TapResearchJavaDemo/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.tapresearch.tapresearchjavademo'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.tapresearch.tapresearchjavademo"
         minSdk 23
-        targetSdk 33
+        targetSdk 35
         versionCode 3
         versionName "1.0"
 
@@ -23,15 +23,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
 
     // required by tap research sdk
-    implementation 'com.tapresearch:tapsdk:3.5.1'
+    implementation 'com.tapresearch:tapsdk:3.6.0--rc2'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
