--- a/android/java/TapResearchJavaDemo/app/build.gradle
+++ b/android/java/TapResearchJavaDemo/app/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     // required by tap research sdk
-    implementation 'com.tapresearch:tapsdk:3.6.2'
+    implementation 'com.tapresearch:tapsdk:3.7.1--rc0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     implementation 'androidx.core:core-ktx:1.10.1'
