--- a/android/FullFeatureSet/TapResearchKotlinFullDemo/app/src/main/AndroidManifest.xml
+++ b/android/FullFeatureSet/TapResearchKotlinFullDemo/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".MainApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -26,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".preview.WallPreviewActivity"
+            android:name=".preview.SurveyWallPreviewActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TapResearchKotlinDemo">
         </activity>
