--- a/android/FullFeatureSet/TapResearchJavaFullDemo/app/build.gradle
+++ b/android/FullFeatureSet/TapResearchJavaFullDemo/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.tapresearch.tapresearchjavademo'
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.tapresearch.tapresearchjavademo"
         minSdk 23
-        targetSdk 35
+        targetSdk 36
         versionCode 3
         versionName "1.0"
 
@@ -40,7 +40,8 @@ dependencies {
 
     // required by sample app
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core:1.17.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
